--- a/.github/workflows/deploy-grafana-dashboard.yml
+++ b/.github/workflows/deploy-grafana-dashboard.yml
@@ -35,10 +35,10 @@ jobs:
                 server: "http://a575860d6905748dca23eeadfc1e24ec-322938893.ap-northeast-1.elb.amazonaws.com/"
                 org-id: 1
                 # Recommended: Token-based authentication
-                #token: "${{ secrets.GRAFANA_TOKEN }}"
+                #token: ""
                 # Or uncomment these lines for basic auth
-                 user: "admin"
-                 password: "grafana123"
+                user: "admin"
+                password: "grafana123"
           current-context: default
           EOF
 
